--- a/app/css/main.css
+++ b/app/css/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 body {
-    background-color: var(--background);
+    /* background-color: var(--background); */
     color: white;
     font-family: Mukta, Helvetica, sans-serif;
     overflow: hidden;
@@ -73,27 +73,44 @@ body {
 
 .sidebar-item-icon {
     font-size: 2.5rem !important;
+    user-select: none;
+    pointer-events: none;
 }
 
 #main {
     /* display: flex; */
+    background-color: var(--background);
+    /* background: #00000040; */
     width: 100%;
     height: 100%;
 }
 
 .master-page {
+    display: none;
+    /* height: 100%; */
+}
+
+.active-page {
     display: flex;
     width: 100%;
     /* height: 100%; */
 }
 
-.home-page {
+.inactive-page {
+    display: none !important;
+}
+
+
+#home-page {
     display: flex;
     width: 100%;
     justify-content: center;
 }
 
-.home-page>table {
+#home-page>table {
+    width: 100%;
+}
+#home-page>table {
     width: 100%;
 }
 
@@ -140,13 +157,15 @@ td {
 
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 10px;
+    width: 100%;
+    justify-content: center;
 }
 
 .plugin {
@@ -154,6 +173,8 @@ td {
     backdrop-filter: blur(5px);
 
     margin: 0px 10px 10px 10px;
+    max-width: 25vw;
+    min-width: 25vw;
     /* max-width: 48%; */
 }
 
@@ -234,5 +255,5 @@ input:focus+.slider {
 
 input:checked+.slider:before {
 
-    transform: translateX(14px);
+    transform: translateX(22px);
 }
