--- a/app/css/main.css
+++ b/app/css/main.css
@@ -45,6 +45,8 @@ body {
     width: 5rem;
     flex-direction: column;
     background: var(--sidebar);
+    /* background: #16161ecc; */
+
 }
 
 
@@ -206,6 +208,7 @@ td {
 .switch {
     position: relative;
     display: inline-block;
+    min-width: 40px;
     width: 40px;
     height: 17px;
     margin: 4px;
