--- a/app/css/main.css
+++ b/app/css/main.css
@@ -193,6 +193,15 @@ td {
 
 }
 
+.plugin-author {
+    display: inline-flex;
+    /* background: #20202c; */
+    width: 100%;
+    font-weight: bold;
+    font-size: 12px;
+    border-bottom: 1px solid graY;
+    /* justify-content: center; */
+}
 
 .plugin-topbar {
     display: flex;
@@ -200,7 +209,7 @@ td {
     width: 100%;
     justify-content: space-evenly;
     background: #16161e;
-    min-height: 60px;
+    min-height: 40px;
 }
 
 
