--- a/app/css/style.css
+++ b/app/css/style.css
@@ -124,14 +124,18 @@ body {
     padding: 8px;
 }
 
+.provider-table {
+    overflow-x: hidden;
+}
+
 .provider {
     display: flex;
-    height: 60px;
+    height: 64px;
     padding-left: 8px;
     background-color: var(--bg3);
     margin-bottom: 4px;
     border-radius: 8px;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 
@@ -142,12 +146,13 @@ body {
 
 .provider-image {
     height: 100%;
-    /* width: 100%; */
+    /* max-height: 60px; */
     max-width: 125px;
 }
 
 .provider-image img {
     height: 100%;
+    width: auto;
     /* width: 100%; */
 }
 
@@ -155,11 +160,37 @@ body {
     max-width: 64px;
 }
 
+.provider-name {
+    max-width: 256px;
+}
+
+::-webkit-scrollbar {
+width: 5px;
+}
+
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px var(--fg);
+border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+background: var(--ac2);
+border-radius: 8px;
+} 
+
 .provider div {
     display: flex;
     flex-grow: 1;
     align-items: center;
     width: 0%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap:break-word;
+    margin: 2px;
+}
+
+.provider p {
+    margin: auto 0px ;
 }
 
 .settings-category {
