--- a/app/css/style.css
+++ b/app/css/style.css
@@ -239,6 +239,7 @@ border-radius: 8px;
     border: none;
     font-size: 18px;
     border-radius: 8px;
+    color: white;
 }
 
 .settings-text-input {
