--- a/app/css/style.css
+++ b/app/css/style.css
@@ -146,7 +146,7 @@ body {
 }
 
 .provider-image {
-    height: 100%;
+    /* height: 100%; */
     /* max-height: 60px; */
     max-width: 125px;
 }
